Revieved search methods and repalced wwith single multifunctional search and filter methods; implemented inventory repoort feature; added alerts for equipment due for inspection; implemented DB extension - usage log